syntax = "proto3";

package proto;

message Stop {
    uint64 id = 1;
    string name = 2;
    double lat = 3;
    double lng = 4;
}

message Bus {
    uint64 id = 1;
    string name = 2;
    repeated uint64 stops = 3;
    bool is_roundtrip = 4;
    uint64 num_unique = 5;
    double geo_length = 6;
    int32 route_length = 7;
}

message Distance {
    uint64 stop_first = 1;
    uint64 stop_second = 2;
    int32 value = 3;
}

message StopToBuses {
    uint64 stop_id = 1;
    repeated uint64 buses_id = 2;
}

message TransportCatalogue {
    repeated Stop stops = 1;
    repeated Bus buses = 2;
    repeated Distance distances = 3;
    repeated StopToBuses stop_to_buses = 4;
}
