syntax = "proto3";

import "graph.proto";

package proto.transport;

message RoutingSettings {
    int32 bus_wait_time = 1;
    double bus_velocity = 2;
}

message Router {
    RoutingSettings settings = 1;
}
